Set text color so it's not black by default (or some text won't show up).
git-svn-id: https://svn.electricmonk.nl/svn/miniorganizer/trunk@38 37481b89-4a6d-4120-abc7-7d70a5cf72f2

--- a/website/css/index.css
+++ b/website/css/index.css
@@ -4,6 +4,7 @@ html, body {
 	font-family: verdana, arial, helvetica, sans-serif;
 	font-size: small;
 	font-weight: normal;
+	color: #FFFFFF;
 }
 div#header {
 	background-color: #2f2f2f;
